# synapse

./: .gitignore  README.md  pyproject.toml
synapse/: __init__.py
synapse/cli/: chat.py  debate_ui.py  helpers.py  main.py  onboarding.py  orchestrate_ui.py  pipe.py  pipeline_ui.py  run.py  tui.py  tui_v2.py
synapse/cli/commands/: config_wizard.py  memory_cmd.py  models_cmd.py  session_cmd.py
synapse/config/: __init__.py  defaults.py  loader.py  schema.py
synapse/core/: __init__.py  aggregator.py  debate.py  executor.py  orchestrator.py  pipeline.py  router.py  scheduler.py  task.py
synapse/memory/: __init__.py  agent.py  compactor.py  embedding.py  retriever.py  schemas.py  store.py  vector_store.py
synapse/models/: __init__.py  anthropic.py  base.py  compat.py  deepseek.py  gemini.py  registry.py
synapse/utils/: streaming.py
tests/: test_phase1.py  test_phase2.py  test_phase4.py
