[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-agent"
version = "0.1.0"
description = "Multi-model collaborative AI Agent CLI framework — orchestrate, debate, and pipeline with multiple LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Reinyo"}]
keywords = ["ai-agent", "llm", "cli", "multi-model", "orchestration", "debate", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "openai>=1.30",
    "anthropic>=0.30",
    "gnureadline>=8.2; platform_system == 'Darwin'",
    "prompt_toolkit>=3.0",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "anyio>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]
memory = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
gemini = [
    "google-genai>=1.0",
]
all = [
    "synapse-agent[memory,gemini,dev]",
]

[project.scripts]
synapse = "synapse.cli.main:app"

[project.urls]
Homepage = "https://github.com/reinyo/synapse"
Repository = "https://github.com/reinyo/synapse"

[tool.setuptools.packages.find]
include = ["synapse*"]

[tool.ruff]
line-length = 100
target-version = "py311"
